src/objects/Salary__c.object
<CustomObject>
    <description>This is an object having lookup relationship with employee</description>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Details__c</fullName>
        <label>Bank Details</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic__c</fullName>
        <description>Mandatory</description>
        <label>Basic</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credited_to__c</fullName>
        <label>Credited to</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Salary</relationshipLabel>
        <relationshipName>Salary</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gross_Salary__c</fullName>
        <formula>Total_Earnings__c  -  PF_Deduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRA__c</fullName>
        <description>Mandatory</description>
        <label>HRA</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mode_of_Payment__c</fullName>
        <label>Mode of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>RTGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Deduction__c</fullName>
        <label>PF Deduction</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salary_Credit_Date__c</fullName>
        <label>Salary Credit Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_Allowl__c</fullName>
        <description>Mandetory</description>
        <label>Special Allowance</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Earnings__c</fullName>
        <formula>Basic__c  +  HRA__c  +  Special_Allowl__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Salary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SAL-{0000}</displayFormat>
        <label>SalaryID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Required_to_fill_Bank_Details</fullName>
        <active>true</active>
        <description>Bank account number should not be null</description>
        <errorConditionFormula>LEN( Bank_Details__c  )   =  0</errorConditionFormula>
        <errorDisplayField>Bank_Account_Number__c</errorDisplayField>
        <errorMessage>Enter the deatils of bank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restricting_salaryInactive_employee</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Credited_to__r.Is_active__c = FALSE,
         Credited_to__r.Is_on_notice_period__c =FALSE)</errorConditionFormula>
        <errorDisplayField>Basic__c</errorDisplayField>
        <errorMessage>Salary cannot be processed for inactive employees.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_of_Bank_Account_Number</fullName>
        <active>true</active>
        <description>Account number of bank should not be changed once entered</description>
        <errorConditionFormula>ISCHANGED(Bank_Account_Number__c)</errorConditionFormula>
        <errorDisplayField>Bank_Account_Number__c</errorDisplayField>
        <errorMessage>Bank account number can not be changed.</errorMessage>
    </validationRules>
</CustomObject>